...
        android:theme="?attr/actionBarTheme"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/backDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#E64C274D "
        android:fontFamily="serif"
        android:text="Back"
        android:textColor="#DDE6ED"
...
